--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Experience"
+    url: /Experience/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Projects"
+    url: /Projects/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Skills"
+    url: /Skills/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Resume"
+    url: /files/venkatesh_resume.pdf
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
