--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Venkatesh Desai"
-  avatar           : "profile.png"
+  avatar           : "venky_dp.jpeg"
   bio              : "Machine Learning Engineer"
   location         : "Boston, MA"
   employer         :
