--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,18 @@
 # main links links
 main:
+  - title: "Pages"
+    url: /pages/
+
+  - title: "Posts"
+    url: /posts/
+
+  - title: "Experience"
+    url: /Experience/
+
+  - title: "Experience"
+    url: /Experience/
+
+      
   - title: "Experience"
     url: /Experience/
 
