--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,19 @@
 # main links links
 main:
   - title: "Pages"
-    url: /_pages/
+    url: /pages/
 
   - title: "Posts"
-    url: /_posts/
+    url: /posts/
 
-  - title: "Experience"
-    url: /Experience/
-
-  - title: "Experience"
-    url: /Experience/
-
+    - title: "Teaching"
+    url: /teaching/    
+    
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
       
   - title: "Experience"
     url: /Experience/
